Created landing page

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,3 +42,14 @@
     -->
   </body>
 </html>
+
+<!-- <div className="App">
+  <header className="App-header">
+    <img src={logo} className="App-logo" alt="logo" />
+    <a href="/Labs/a1/index.html">Lab 1</a>
+    <br />
+    <a href="/Labs/a2/index.html">Lab 2</a>
+    <br />
+    <a href="/Kanbas/Dashboard/screen.html">A2 Kanbas Dashboard</a>
+  </header>
+</div> -->
